--- a/MainPage.dox
+++ b/MainPage.dox
@@ -10,6 +10,31 @@ Uwaga: aktualna treść zadania znajduje się w [Moodle](https://moodle.mimuw.ed
 Tegoroczne duże zadanie polega na zaimplementowaniu operacji na wielomianach
 rzadkich wielu zmiennych.
 
-TODO
+### Opis biblioteki
+
+Funkcje udostępniane przez bibliotekę umożliwiają tworzenie wielomianów wielu zmiennych i podstawowe operacje
+na takich wielomianach, czyli:
+ - dodawanie
+ - odejmowanie
+ - mnożenie wielomianów
+ - zwracanie wielomianu przeciwnego
+ - zwracanie stopnia wielomianu (globalnie, bądź względem danej zmiennej).
+ - tworzenie wielomianu powstałego przez podstawienie za pierwszą zmienną konkretnej wartości
+ - stwierdzenie czy dwa wielomiany są równe
+
+### Opis implementacji
+
+Wielomiany niebędące wsþółczynnikami utworzone przez funkcje interfejsu
+zawierają tablicę jednomianów posortowaną rosnąco względem wykładników.
+
+Za ten efekt odpowiedzialne są funkcje dodające wielomiany, które powinny
+być wykorzystywane do tworzenia nietrywialnych wielomianów, między innymi dlatego, że
+inne funkcje, na przykład funkcja mnożąca wielomiany, korzystają z tej własności.
+
+Funkcja dodająca wielomiany działa w czasie proporcjonalnym do sumy
+szerokości wielomianów pomnożonego przez kwadrat głębokości wielomianów.
+
+Funkcja mnożąca wielomiany działa w czasie proporcjonalnym do
+iloczynu szerokości wielomianów pomnożonego przez kwadrat głębokości wielomianów.
 
 */
