Fixed poly compose

--- a/MainPage.dox
+++ b/MainPage.dox
@@ -113,9 +113,9 @@ oraz DEG_BY upraszcza implementację parsowania poleceń bezparamterowych.
 Dokonujemy również podziału poleceń ze względu na efekt ich wykonania:
  - polecenie POP - skutkujące usunięciem wielomianu z wierzchołka stosu
  - polecenia, które w implementacji określamy mianem "PushCommand" - skutkujące dodaniem wielomianu na stos, je z kolei dzielimy na:
-     - polecenie ZERO
-     - polecenia ADD, MUL, SUB - wymagające ściągnięcia ze stosu dwóch wielomianów, wykonania na nich operacji binarnej i dodania wyniku na stos
-     - polecenia CLONE, NEG, AT - wymagające wykonania na wielomianie z wierzchołka stosu
+     - polecenia ZERO oraz COMPOSE
+     - polecenia ADD, MUL oraz SUB - wymagające ściągnięcia ze stosu dwóch wielomianów, wykonania na nich operacji binarnej i dodania wyniku na stos
+     - polecenia CLONE, NEG oraz AT - wymagające wykonania na wielomianie z wierzchołka stosu
                                   (w przypadku NEG i AT - wszcześniej ściągamy ten wielomian ze stosu) operacji unarnej i dodanie wyniku na stos
  - polecenia, które w implemntacji określamy mianem "PrintCommand" - skutkujące wypisaniem na wyjście standardowe tekstu, je dzielimy na:
      - polecenie PRINT
